# manifoldpy

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.circleci/: config.yml
docs/: build.sh  conf.py  environment.yaml  index.rst  manifold.rst  manifoldpy.rst  modules.rst  requirements.txt
manifold/: __init__.py  api.py  calibration.py  config.py  markets.py
manifoldpy/: __init__.py  api.py  cache_utils.py  calibration.py  config.py
scripts/: all_calibration.py  build_cache.py  cache_stats.py  information_per_trader.py  long_market_calibration.py  markets_vs_bets_perf.py  markets_w_creators.py  num_trader_calibration.py  test_post_api.py  update_cache.py
tests/: api_test.py  cache_test.py  calibration_test.py
tests/api_test/: __init__.py  api_correctness_test.py  computed_values_test.py  conftest.py  get_endpoints_test.py  prep_test.py  types_test.py
