[project]
name = "manifoldpy"
version = "1.0.0"
authors = [
  { name="Vincent Luczkow", email="vincent.luczkow@gmail.com" },
]
description = "Python tools for working with Manifold Markets"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "attrs==22.1.0",
    "matplotlib==3.5.2",
    "numpy==1.23.1",
    "requests==2.28.1",
    "scipy==1.8.1"
]

[project.optional-dependencies]
tests = [
    "pytest==7.1.2"
]

[project.urls]
"Homepage" = "https://github.com/vluzko/manifold-markets-python"
"Bug Tracker" = "https://github.com/vluzko/manifold-markets-python/issues"


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
